fixed width of league link
Link was pushing aside (flexbox - space-around) the rest of the
information and making it hard to read.

--- a/src/client/app/shared/button-info/button-info.component.scss
+++ b/src/client/app/shared/button-info/button-info.component.scss
@@ -11,9 +11,13 @@ $font-color: #d9d9d9;
 $link-color: #646400;
 $visted-link: #b9b9b9;
 
-a {
+.league {
   color: $font-color;
   font-weight: bold;
+  max-width: 250px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   &:active {
     color: $link-color;
